# unitree_rl_mjlab

./: .gitignore  setup.py
deploy/include/FSM/: State_RLBase.h
deploy/robots/g1_23dof/: CMakeLists.txt
deploy/robots/g1_23dof/config/: config.yaml
deploy/robots/g1_23dof/config/policy/mimic/fight_kick/v0/params/: fight1_subject3_frames_5100_5160.npz
deploy/robots/g1_23dof/config/policy/mimic/fight_punch/v0/params/: fight1_subject3_frames_220_260.npz
deploy/robots/g1_23dof/config/policy/mimic/fight_wave/v0/params/: fight1_subject3_frames_7080_7260.npz
deploy/robots/g1_23dof/src/: State_Mimic.cpp
scripts/: README.md  csv_to_npz.py  export_policy.py  gen_deploy_yaml.py  package_g1_23dof_mimic.py  play.py  vis_motion.py
simulate/: CMakeLists.txt  config.yaml  install_deps.sh  run_headless.sh
simulate/src/: egl_viewer.h  headless_main.cc  keyboard_joystick.h  param.h  unitree_sdk2_bridge.h
simulate/src/joystick/: joystick.h
src/assets/motions/g1_23dof/: fight1_subject3_frames_220_260.npz  fight1_subject3_frames_3960_4080.npz  fight1_subject3_frames_5100_5160.npz  fight1_subject3_frames_7080_7260.npz  frogger_1.npz
src/assets/robots/: __init__.py
src/assets/robots/unitree_g1/xmls/: scene_g1_23dof.xml
src/tasks/: __init__.py
